initializing code across all files

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 		<!-- CSS - Replace # with relative path to .css stylesheet -->
-		<!-- <link rel="stylesheet" href="#/reset.css"> -->
-		<link rel="stylesheet" href="#">
+		<link rel="stylesheet" href="assets/css/reset.css">
+		<link rel="stylesheet" href="assets/css/style.css">
 		
 		<!-- Title Tag -->
-		<title>Hello, world!</title>
+		<title>Train Scheduler</title>
 		
 	</head>
   
@@ -18,10 +18,10 @@
 		<h1>Hello, world!</h1>
 
 		<!-- Optional JavaScript and jQuery -->
-		<!-- Full jQuery Tag - Uncomment to Use jQuery in your code
-		<!-- <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script> -->
+		<!-- Full jQuery Tag - Uncomment to Use jQuery in your code -->
+		<script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
 		<!-- 2x JavaScript Tags Open - Uncomment, and Replace # with relative path to JS Source Code -->
-		<!-- <script src="#"></script> -->
+		<script src="assets/js/app.js"></script>
 		<!-- <script src="#"></script> -->
 	</body>
 </html>
